[metadata]
name = nvme-disk-qual
summary = NVMe Disk Qualification Tool
description_file =
    README.md
long_description = A simple NVMe disk qualification tool
author = Drew Thorstensen
author_email = thorst@us.ibm.com
python_requires = >= 3.6
license = Apache v2.0

[options]
package_dir=
    =src